--- a/views/repertory/new.ejs
+++ b/views/repertory/new.ejs
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>Create Repertory</h1>
+    <form action="/repertory" method="POST">
+        
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title">
+        <label for="author">Author</label>
+        <input type="text" name="author" id="author">
+        <label for="genre">Genre</label>
+        <input type="text" name="genre" id="genre">
+        <input type="button" value="Create Repertory">
+    </form>
+    <a href="/repertory">Browse All</a>
 </body>
 </html>
