code post route to create repertory in database

--- a/views/repertory/new.ejs
+++ b/views/repertory/new.ejs
@@ -15,7 +15,7 @@
         <input type="text" name="author" id="author">
         <label for="genre">Genre</label>
         <input type="text" name="genre" id="genre">
-        <input type="button" value="Create Repertory">
+        <input type="submit" value="Create Repertory">
     </form>
     <a href="/repertory">Browse All</a>
 </body>
