code get index(all) items from database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Welcome to the Piano Repertory App!</h1>
+    <p><a href="/repertory">Browse All</a></p>
+    <p><a href="/repertory/new">Create Repertory</a></p>
 </body>
 </html>
