--- a/views/repertory/show.ejs
+++ b/views/repertory/show.ejs
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repertory</title>
+    <title><%= repertory.title></title>
 </head>
 <body>
-    <h1>Show page</h1>
+    <h1><%= repertory.title></h1>
+    <p>Author: <%= repertory.author %></p>
+    <p>Genre: <%= repertory.genre %></p>
 </body>
 </html>
