create edit template

--- a/views/repertory/index.ejs
+++ b/views/repertory/index.ejs
@@ -6,6 +6,8 @@
     <title>Repertory Index</title>
 </head>
 <body>
+    <a href="/">Home</a>
+    <a href="/repertory/new">Create Repertory</a>
     <h1>Repertory Index</h1>
     <ul>
         <% repertory.forEach((song)=>{ %>
@@ -15,5 +17,6 @@
         <% }) %>
         
     </ul>
+
 </body>
 </html>
