--- a/views/repertory/show.ejs
+++ b/views/repertory/show.ejs
@@ -12,5 +12,6 @@
     <form action="/repertory/<%= repertory._id %>?_method=DELETE" method="POST">
     <button type="submit">Delete <%= repertory.title%></button>
     </form>
+    <a href="/repertory/<%=repertory._id %>/edit">Edit <%= repertory.title %></a>
 </body>
 </html>
